<resources>
    <string name="app_name">SNAP_AT</string>
    <string name="domgfi">\@gfi.fr</string>
    <string name="go">SUIVANT</string>
    <string name="loginLabel">Entrez votre adresse mail:</string>
    <string name="action_search">Chercher</string>
    <string name="action_add">Ajouter</string>
    <string name="openLabel">Open</string>
    <string name="lostLabel">Lost</string>
    <string name="winLabel">Win</string>

    <string name="emailplaceholder">nom.utilisateur</string>
    <string name="created">créé(s)</string>
    <string name="global">élément(s)</string>
    <string name="client">Client :</string>
    <string name="dateLatest">Débute (au plus tard) :</string>
    <string name="contact">Nom du contact:</string>
    <string name="location">Position :</string>
    <string name="success">Facteurs de succès :</string>
    <string name="rate">Prix :</string>
    <string name="save">Sauvegarder</string>
    <string name="share">Partager</string>
    <string name="consultant">Consultants :</string>
    <string name="duree">Durée en mois et jour/semaine :</string>
    <string name="title">Titre</string>
    <string name="desc">Description</string>
    <string name="client_modif">nom client</string>
    <string name="dateLatest_modif">date début</string>
    <string name="contact_modif">nom contact</string>
    <string name="location_modif">position</string>
    <string name="duree_modif">durée en mois</string>
    <string name="duree_modif2">durée en jour/semaine</string>
    <string name="consultant_modif">nom consultant</string>
    <string name="success_modif">3 facteurs de succès</string>
    <string name="rate_modif">prix</string>
</resources>
