<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/card_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context="com.epsi.snap_at.view.ViewDetail">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/card_detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/title"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/card_detail_status"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/card_bubble_open"/>

                    <EditText
                        android:id="@+id/card_detail_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/desc"
                        android:maxLines="3"
                        android:minHeight="60dp"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"/>

                </LinearLayout>

                <GridLayout
                    android:id="@+id/card_details_misc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:columnCount="2"
                    android:rowCount="6"
                    android:useDefaultMargins="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_row="0"
                        android:labelFor="@+id/card_detail_client"
                        android:text="@string/client"/>

                    <EditText
                        android:id="@+id/card_detail_client"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_row="1"
                        android:hint="@string/client_modif"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                    <android.support.v4.widget.Space
                        android:layout_height="5dp"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_row="3"/>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_row="4"
                        android:labelFor="@+id/card_detail_date"
                        android:text="@string/dateLatest"/>

                    <EditText
                        android:id="@+id/card_detail_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_row="5"
                        android:hint="@string/dateLatest_modif"
                        android:inputType="date"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_row="0"
                        android:labelFor="@+id/card_detail_contact"
                        android:text="@string/contact"/>

                    <EditText
                        android:id="@+id/card_detail_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_row="1"
                        android:hint="@string/contact_modif"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                    <android.support.v4.widget.Space
                        android:layout_height="5dp"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_row="3"/>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_row="4"
                        android:labelFor="@+id/card_detail_location"
                        android:text="@string/location"/>

                    <EditText
                        android:id="@+id/card_detail_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_row="5"
                        android:hint="@string/location_modif"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                </GridLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_details_misc">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/card_detail_duration"
                        android:text="@string/duree"/>

                    <android.support.v4.widget.Space
                        android:layout_width="268dp"
                        android:layout_height="8dp"/>

                    <EditText
                        android:id="@+id/card_detail_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duree_modif"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                    <android.support.v4.widget.Space
                        android:layout_width="267dp"
                        android:layout_height="8dp"/>

                    <EditText
                        android:id="@+id/card_detail_duration2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duree_modif2"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/card_detail_success"
                        android:text="@string/success"/>

                    <android.support.v4.widget.Space
                        android:id="@+id/space"
                        android:layout_width="263dp"
                        android:layout_height="8dp"/>

                    <EditText
                        android:id="@+id/card_detail_success"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/success_modif"
                        android:maxLines="3"
                        android:minHeight="60dp"
                        android:scrollbarSize="3dp"
                        android:scrollbars="horizontal"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/card_detail_consultant"
                        android:text="@string/consultant"/>

                    <android.support.v4.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="8dp"/>

                    <EditText
                        android:id="@+id/card_detail_consultant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/consultant_modif"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:weightSum="1"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout4"
                    tools:layout_editor_absoluteY="440dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/card_detail_rate"
                        android:text="@string/rate"/>

                    <android.support.v4.widget.Space
                        android:layout_width="281dp"
                        android:layout_height="8dp"/>

                    <EditText
                        android:id="@+id/card_detail_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/rate_modif"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/card_detail_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/card_detail_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>